Bug 483788.  Don't leak if a broken protocol handler returns a channel but error rv.  r=bsmedberg, moa=biesi